--- a/SimpleApp/Views/Home/Index.cshtml
+++ b/SimpleApp/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron text-center">
+    <h1>Exercise 2: App Development</h1>
+    <p>Developed by Seyed Reza Amerizadeh</p>
 </div>
+
